--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -72,9 +72,35 @@ button {
 .main {
   width: 100%;
   min-height: 100vh;
-  padding: 100px 0 0 0;
-
+  padding: 200px 0 0 0;
+  display: flex;
+  justify-content: space-between;
+  &-image {
+    width: 550px;
+    height: 550px;
+    border-radius: 100%;
+    background-color: bisque;
+    position: relative;
+    img {
+      position: absolute;
+      width: 100%;
+      height: 90%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-60%, -60%);
+    }
+  }
   &-description {
+    width: fit-content;
+    padding: 0 90px;
+    h1 {
+      @include font(60px, 81px, 800);
+      color: $primary-blue;
+      margin: 0 0 100px 0;
+      span {
+        color: $red;
+      }
+    }
     &__colors {
       h2 {
         @include font(20px, 28px, 700);
