--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -34,6 +34,20 @@ button {
   max-width: $max-width;
   margin: 0 auto;
   position: relative;
+  z-index: 1;
+
+  &::after {
+    width: 40%;
+    background-color: $primary-orange;
+    display: block;
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+    opacity: 0.5;
+  }
 }
 
 .header {
@@ -43,10 +57,6 @@ button {
   left: 0;
   right: 0;
   padding: 0 30px;
-  ul {
-    display: flex;
-    justify-content: space-between;
-  }
   &__flex-container {
     display: flex;
     justify-content: space-between;
@@ -54,11 +64,61 @@ button {
     height: 100%;
   }
   &__social {
+    ul {
+      display: flex;
+      justify-content: space-between;
+    }
     li {
       margin: 0 0 0 15px;
     }
   }
   &__nav {
+    & .burger {
+      transition: all 0.5s ease-in-out;
+      width: 30px;
+      height: 30px;
+      position: relative;
+      display: none;
+      cursor: pointer;
+      &::after {
+        display: block;
+        content: "";
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 4px;
+        background-color: $primary-blue;
+        border-radius: 3px;
+      }
+      &::before {
+        display: block;
+        content: "";
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 4px;
+        background-color: $primary-blue;
+        border-radius: 3px;
+      }
+      span {
+        display: block;
+        position: absolute;
+        bottom: 13px;
+        border-radius: 3px;
+        width: 100%;
+        height: 4px;
+        background-color: $primary-blue;
+      }
+    }
+    .rotated {
+      transform: rotate(-90deg);
+      transition: all 0.5s ease-in-out;
+    }
+    .nav-list {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
     li {
       margin: 0 30px;
       a {
@@ -72,15 +132,17 @@ button {
 .main {
   width: 100%;
   min-height: 100vh;
-  padding: 200px 0 0 0;
+  padding: 200px 50px 0 0;
   display: flex;
   justify-content: space-between;
   &-image {
+    flex: 0 0 auto;
     width: 550px;
     height: 550px;
     border-radius: 100%;
-    background-color: bisque;
+    background-color: rgba(255, 228, 196, 0.7);
     position: relative;
+    overflow: hidden;
     img {
       position: absolute;
       width: 100%;
@@ -139,6 +201,70 @@ button {
             margin: 0;
           }
         }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 968px) {
+  .main {
+    padding: 130px 0 0 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    &-description {
+      padding: 0 10px;
+      h1 {
+        margin-bottom: 20px;
+      }
+    }
+    &-image {
+      margin-top: 20px;
+      width: 450px;
+      height: 450px;
+    }
+  }
+}
+@media screen and (max-width: 768px) {
+  .header {
+    &__nav {
+      & .burger {
+        display: block;
+      }
+      .nav-list {
+        position: absolute;
+        background-color: $black;
+        top: 100px;
+        height: 0;
+        left: 0;
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        overflow: hidden;
+        z-index: 100;
+        transition: all 0.5s ease-in-out;
+        li {
+          //   margin-bottom: 30px;
+          padding: 30px 0;
+        }
+      }
+      .open {
+        height: 400px;
+        transition: all 0.5s ease-in-out;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 668px) {
+  .main {
+    &-image {
+      width: 350px;
+      height: 350px;
+    }
+    &-description {
+      h1 {
+        @include font(40px, 61px, 800);
       }
     }
   }
